# bookdash

./: .flake8  .gitignore  Makefile  README.md  goodreads-search.html  goodreads_auth.py  myproject.py  pyproject.toml
.todo/: done.txt  todo.txt  todo.txt.bak
bookdash/: .gitignore  __init__.py  books.py  browser.py  cli.py  client.py  clients.py  config.py  cookie_jar.py  csv_file.py  db.py  elements.py  private.py
bookdash/clients/: base_client.py  goodreads_client.py
bookdash/elements/: book_element.py  book_page_element.py  element.py  found_book_element.py
bookdash/models/: goodreads_book.py
docs/: notes.md
reference/: README.md  dbio.py  goodreads_auth.py
tests/: __init__.py  conftest.py  test_boodash.py  test_books.py  test_browser.py  test_clients.py  test_config.py  test_cookie_jar.py  test_db.py  test_elements.py  test_webserver.py
tests/clients/: test_base_client.py  test_goodreads_client.py
tests/data/: dice.html  goodreads-book-12813630.html  goodreads-book-15784263.html  goodreads-book-5776788.html  goodreads-email-signin.html  goodreads-home-authed.html  goodreads-home-no-auth.html  goodreads-library-export.csv  goodreads-search-book.html  goodreads-search.html  goodreads-signin.html  goodreads-user-signin.html  result_page.html
tests/elements/: test_book_element.py  test_book_page_element.py  test_element.py  test_found_book_element.py
tools/: mkshell  shell.py
