[tool.poetry]
name = "bookdash"
version = "0.1.0"
description = "A book lookup tool."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
jedi = "<=0.17.2"
lxml = "^4.6.2"
more-itertools = "^8.6.0"
click = "^7.1.2"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.19.0"

[tool.poetry.scripts]
dash = "bookdash.cli:search"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
