[tool.poetry]
name = "bookdash"
version = "0.1.0"
description = "A book lookup tool."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.24.0"
jedi = "<=0.17.2"
lxml = "^4.6.2"
more-itertools = "^8.6.0"
click = "^7.1.2"
tabulate = "^0.8.7"

[tool.poetry.scripts]
dash = "bookdash.cli:search"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
pytest = "^6.2.2"
ipython = "^7.19.0"
requests-mock = "^1.8.0"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
flake8-black = "^0.2.1"
flakehell = "^0.9.0"
flake8-docstrings = "^1.5.0"
xdoctest = "^0.15.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--xdoc"
filterwarnings = [
	"ignore",             # ignore warnings
	"default:::bookdash"  # except triggered by my package
]

[tool.flakehell]
format = "grouped"
application-import-names = [ "bookdash", "tests" ]
import-order-style = "google"
ignore = [ "E203", "E501", "W503" ]
max-line-length = 80
docstring-convention = "numpydoc"

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
black = ["+*"]
import-order = ["+*"]
docstrings = ["+*"]
