[tool.poetry]
name = "bookdash"
version = "0.1.0"
description = "A dashboard for your books."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.24.0"
jedi = "<=0.17.2"
lxml = "^4.6.2"
more-itertools = "^8.6.0"
click = "^7.1.2"
tabulate = "^0.8.7"
beautifulsoup4 = "^4.12.3"
nest-asyncio = "^1.6.0"
# required to fix the .render() method from requests-html
# https://github.com/pyppeteer/pyppeteer/issues/179
# pyppeteer = "1.0.2"
pyppeteer = "0.0.25"
pyee = "7.0.3"
flake8 = "^7.1.1"
pylama = "^8.4.1"
rich = "^13.9.4"
requests-html = {git = "https://github.com/psf/requests-html/"}
selenium = "^4.27.1"
undetected-chromedriver = {git = "https://www.github.com/ultrafunkamsterdam/undetected-chromedriver", rev = "master"}
selenium-stealth = "^1.0.6"
pytest-localserver = "^0.9.0.post0"
selenium-wire = "^5.1.0"
blinker = "1.7.0"
pyxdg = "^0.28"
confz = "^2.0.1"
pydantic = "^2.10.3"
email-validator = "^2.2.0"

[tool.poetry.scripts]
books = "bookdash.cli:search"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
pytest = "^6.2.2"
ipython = "^7.19.0"
requests-mock = "^1.8.0"
black = {version = "^20.8b1", allow-prereleases = true}
flake8-black = "^0.2.1"
flakehell = "^0.9.0"
flake8-docstrings = "^1.5.0"
xdoctest = "^0.15.3"
pdbpp = "^0.10.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--xdoc -vv -x"
filterwarnings = [
	"ignore",             # ignore warnings
	"default:::bookdash"  # except triggered by my package
]

[tool.flakehell]
format = "grouped"
application-import-names = [ "bookdash", "tests" ]
import-order-style = "google"
ignore = [ "E203", "E501", "W503" ]
max-line-length = 80
docstring-convention = "numpydoc"

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
black = ["+*"]
import-order = ["+*"]
docstrings = ["+*"]
